# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2015-03-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change cloudi_service_hexpi to use cloudi_queue
    * Add more verification digits to the hexpi test

2015-03-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve the hexpi test (avoid task timeouts after task size converges)
    * cloudi_service_map_reduce behaviour change with function
      cloudi_service_map_reduce_new changing from arity 4 to 5
    * Add cloudi_queue data structure

2015-03-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update nodefinder
    * Improve the hexpi test

2015-02-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update nodefinder

2015-02-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix write_truncate and write_append in cloudi_service_filesystem
      so they find existing files when using HTTP method
      suffixes on service names
    * Add the ability to use write_append in cloudi_service_filesystem
      with byte ranges that go outside the existing file boundary
      (gaps are filled with null characters)

2015-02-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add timeout usage to cloudi_service_map_reduce for slow disk storage

2015-02-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Java 7 raw type warning in Java CloudI API

2015-02-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_validate CT tests
    * Fix cloudi_service_validate

2015-02-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add validation and failure handling to cloudi_service_quorum
    * Fix cloudi_service_validate
    * Make sure a failure to validate the request and/or the request info
      causes a source failure
    * Add request validation and source failure handling
      to cloudi_service_router

2015-02-05 Michael Truog   <mjtruog [at] gmail (dot) com>
