@@ -4,7 +4,7 @@
 #
 # BSD LICENSE
 # 
-# Copyright (c) 2011-2014, Michael Truog <mjtruog at gmail dot com>
+# Copyright (c) 2011-2015, Michael Truog <mjtruog at gmail dot com>
 # All rights reserved.
 # 
 # Redistribution and use in source and binary forms, with or without
@@ -46,7 +46,8 @@ __all__ = [
     'terminate_exception',
 ]
 
-import sys, os, types, struct, socket, select, inspect, collections, traceback
+import sys, os, types, struct, socket, select, codecs, \
+       inspect, collections, traceback
 from timeit import default_timer
 from erlang import (binary_to_term, term_to_binary,
                     OtpErlangAtom, OtpErlangBinary)
@@ -718,7 +719,7 @@ class terminate_exception(Exception):
 # force unbuffered stdout/stderr handling without external configuration
 class _unbuffered(object):
     def __init__(self, stream):
-        self.__stream = stream
+        self.__stream = codecs.getwriter('UTF-8')(stream)
 
     def write(self, data):
         self.__stream.write(data)
